src/coolcmp/unit_tests/Semantics/success/dispatcharglist.cl
class Test {
  foo:Test;
  bar(x:Int,y:Int,z:Int):Object{foo.bar(x,y,z)};
};

class Main {
	main() : Int {
		1
	};
};