src/coolcmp/unit_tests/Semantics/fail/letinitmultiplebindings.cl
class Test {
  foo:Test;
  baz():String { let x:Int <- 5, y:String <- "biddle", z:Int in x};
};

class Main {
	main() : Int {
		1
	};
};